# nala

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
Testing/unit_tests/PAdantic/: test_padantic.py
Testing/unit_tests/PAdantic/models/: test_element.py
docs/: requirements.txt
docs/source/: Auxiliary.rst  Element.rst  Examples.rst  Fields.rst  Lattice.rst  Magnet.rst  Translator.rst  conf.py  index.rst  modules.rst  nala.Exporters.rst  nala.Importers.rst  nala.models.rst  nala.rst  references.bib
docs/source/Architecture/: Element.rst  Lattice.rst  index.rst
docs/source/Architecture/Element/: Auxiliary.rst  index.rst
docs/source/Translator/: Fields.rst  index.rst
nala/: __init__.py  nala.py
nala/Exporters/: CATAP.py  Export_CATAP_YAML.py  YAML.py
nala/Importers/: CATAP_Loader.py  SimFrame_Loader.py  YAML_Loader.py
nala/models/: RF.py  baseModels.py  control.py  degauss.py  diagnostic.py  electrical.py  element.py  elementList.py  laser.py  magnetic.py  manufacturer.py  physical.py  plasma.py  reference.py  shutter.py  simulation.py
nala/translator/conversion_rules/codes/: cheetah_conversion.py  (+3 more)
nala/translator/converters/: __init__.py  aperture.py  base.py  cavity.py  converter.py  diagnostic.py  drift.py  laser.py  layout.py  magnet.py  model.py  plasma.py  section.py  twiss.py  wake.py
nala/translator/utils/: SDDSFile.py  classes.py  functions.py  units.py
nala/unit_tests/models/: test_controls.py  test_element.py  test_elementList.py  test_machine_model.py  test_magnetic.py  test_physical.py
(+28 files in other folders)
